# Weekly-Challange

./: .gitmodules  CMakeLists.txt  README.md  TODO.txt
assets/Metroidvania assets 16x16/map/: map.json  map.tmx
assets/map/: backgrounds.tsx  env.tsx  map1.tmx  waterfall_anim_strip_4.tsx  waterfall_bottom_anim_strip_4.tsx
src/: CameraManager.cpp  CameraManager.hpp  Game.cpp  Game.hpp  main.cpp  stdafx.hpp
src/Core/: Collision.cpp  Collision.hpp  Physics2D.cpp  Physics2D.hpp  TileLoader.hpp  json.hpp
src/Entities/: AnimationManager.cpp  AnimationManager.hpp  CameraManager2D.cpp  CameraManager2D.hpp  Coin.cpp  Coin.hpp  Collision.cpp  Collision.hpp  Entity.cpp  Entity.hpp  Keybindings.hpp  Objects.hpp  Player.cpp  Player.hpp
src/Entities/Enemies/: Enemy.cpp  Enemy.hpp  Fly.cpp  Fly.hpp  Mushroom.cpp  Mushroom.hpp  Slime.cpp  Slime.hpp  Worm.cpp  Worm.hpp
src/EntityManagers/: AnimationManager.cpp  AnimationManager.hpp  CameraManager2D.hpp  CollisionManager.cpp  CollisionManager.hpp
src/Levels/: OrbitSimulator.cpp  OrbitSimulator.hpp  PlatformGame.cpp  PlatformGame.hpp
src/Levels/Week1/: OrbitSimulator.cpp
src/Levels/Week2/: PlatformGame.cpp  PlatformGame.hpp
src/Levels/Week3/: Platformer.cpp  Platformer.hpp
src/Levels/Week3-4/: Platformer.cpp  Platformer.hpp
src/Pause/: PauseWindow.cpp  PauseWindow.hpp
src/Settings/: RaySettingsTypes.hpp  SettingsWindow.cpp  SettingsWindow.hpp  WinWrapper.cpp  WinWrapper.hpp
src/States/: GameState.cpp  GameState.hpp  MainMenuState.cpp  MainMenuState.hpp  State.cpp  State.hpp
src/Tileson/: raylib-tileson.cpp  raylib-tileson.h
